--- a/app/components/blog/blog.css
+++ b/app/components/blog/blog.css
@@ -1,121 +1,127 @@
 .blog-content {
-  & a {
-    @apply text-sage-700 underline underline-offset-4 hover:text-teal-800 font-semibold;
-  }
-  iframe {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-  }
+ & a {
+  @apply text-sage-700 underline underline-offset-4 hover:text-teal-800 font-semibold;
+ }
+ iframe {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+ }
 
-  & p {
-    position: relative;
-    display: block;
-    width: 100%;
-    padding: 0;
-    overflow: hidden;
-    @apply pb-4 text-lg;
-    &:first-child {
-      @apply text-lg tablet:text-xl;
-    }
-    &:after {
-    }
+ & p {
+  position: relative;
+  display: block;
+  width: 100%;
+  padding: 0;
+  overflow: hidden;
+  @apply pb-4 text-lg;
+  &:first-child {
+   @apply text-lg tablet:text-xl;
   }
+  &:after {
+  }
+ }
 
-  & h2 {
-    @apply text-3xl mb-4 tablet:text-4xl font-sentinel__SemiBoldItal;
-  }
+ & h2 {
+  @apply text-3xl mb-4 tablet:text-4xl font-sentinel__SemiBoldItal;
+ }
 
-  & h3 {
-    @apply text-2xl mb-4 tablet:text-3xl font-sentinel__SemiBoldItal;
-  }
+ & h3 {
+  @apply text-2xl mb-4 tablet:text-3xl font-sentinel__SemiBoldItal;
+ }
 
-  & h4 {
-    @apply text-xl mb-4 tablet:text-2xl font-sentinel__SemiBoldItal;
-  }
+ & h4 {
+  @apply text-xl mb-4 tablet:text-2xl font-sentinel__SemiBoldItal;
+ }
 
-  & h5 {
-    @apply font-sentinel__SemiBoldItal text-primary-600 mb-8 text-2xl;
-  }
+ & h5 {
+  @apply font-sentinel__SemiBoldItal text-primary-600 mb-8 text-2xl;
+ }
 
-  & ul {
-    @apply ml-7 mb-10;
-  }
-  & li {
-    @apply text-lg mb-4;
-    list-style-type: disc;
-  }
+ & ul {
+  @apply ml-7 mb-10;
+ }
+ & li {
+  @apply text-lg mb-4;
+  list-style-type: disc;
+ }
 
-  & [class*="wp-image"] {
-    @apply mb-8 text-center mx-auto;
-  }
+ & [class*="wp-image"] {
+  @apply mb-8 text-center mx-auto;
+ }
 }
 
 .et_ck_form_v6,
 .eltdf-btn {
-  display: none;
+ display: none;
 }
 
 [rel*="et_ck_modal"] {
-  display: none !important;
+ display: none !important;
 }
 
 .lty-playbtn {
-  display: block;
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  cursor: pointer;
-  transform: translate3d(-50%, -50%, 0);
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-  background-color: transparent;
-  background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.7112 4.14321C14.0082 3.95188 7.988 3.95265 5.28875 4.14321C2.366 4.35009 2.02175 6.18096 2 11C2.02175 15.8105 2.363 17.6491 5.28875 17.8568C7.98875 18.0473 14.0082 18.0481 16.7112 17.8568C19.634 17.6499 19.9783 15.819 20 11C19.9783 6.18951 19.637 4.35087 16.7112 4.14321V4.14321ZM8.75 14.1111V7.88893L14.75 10.9946L8.75 14.1111V14.1111Z" fill="%23FF0000" /></svg>');
-  //filter: grayscale(100%);
-  transition: all 0.3s cubic-bezier(0, 0, 0.2, 1);
-  border: none;
+ display: block;
+ width: 100px;
+ height: 100px;
+ position: absolute;
+ cursor: pointer;
+ transform: translate3d(-50%, -50%, 0);
+ top: 50%;
+ left: 50%;
+ z-index: 1;
+ background-color: transparent;
+ background-image: url('data:image/svg+xml;utf8,<svg viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.7112 4.14321C14.0082 3.95188 7.988 3.95265 5.28875 4.14321C2.366 4.35009 2.02175 6.18096 2 11C2.02175 15.8105 2.363 17.6491 5.28875 17.8568C7.98875 18.0473 14.0082 18.0481 16.7112 17.8568C19.634 17.6499 19.9783 15.819 20 11C19.9783 6.18951 19.637 4.35087 16.7112 4.14321V4.14321ZM8.75 14.1111V7.88893L14.75 10.9946L8.75 14.1111V14.1111Z" fill="%23FF0000" /></svg>');
+ //filter: grayscale(100%);
+ transition: all 0.3s cubic-bezier(0, 0, 0.2, 1);
+ border: none;
 }
 .lty-activated .lty-playbtn {
-  width: 0;
-  height: 0;
+ width: 0;
+ height: 0;
 }
 .lty-wrapper {
-  opacity: 1;
-  transition: opacity 0.3s cubic-bezier(0, 0, 0.2, 1);
-  &:hover {
-    opacity: 0.9;
-    .lty-playbtn {
-      filter: grayscale(100%);
-    }
+ opacity: 1;
+ transition: opacity 0.3s cubic-bezier(0, 0, 0.2, 1);
+ &:hover {
+  opacity: 0.9;
+  .lty-playbtn {
+   filter: grayscale(100%);
   }
+ }
 }
 
 .feature-blog-spacer {
-  @media only screen and (min-width: 768px) {
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 60px;
-      background: #ffffff;
-    }
+ @media only screen and (min-width: 768px) {
+  &:after {
+   content: "";
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 60px;
+   background: #ffffff;
   }
-  @media only screen and (min-width: 1024px) {
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 0px;
-      background: #ffffff;
-    }
+ }
+ @media only screen and (min-width: 1024px) {
+  &:after {
+   content: "";
+   position: absolute;
+   bottom: 0;
+   left: 0;
+   width: 100%;
+   height: 0px;
+   background: #ffffff;
   }
+ }
+}
+
+.blog-preview-text {
+ display: -webkit-box;
+ -webkit-line-clamp: 3;
+ -webkit-box-orient: vertical;
 }
