added new color palette, error fixes with Sentry

--- a/styles/app.css
+++ b/styles/app.css
@@ -36,18 +36,38 @@
  --sage-700: #475658;
  --sage-800: #354142;
 
- --emerald-50: #e2f6f9;
- --emerald-100: #a3d4d9;
- --emerald-200: #80b9bf;
- --emerald-300: #558e94;
- --emerald-400: #366d73;
- --emerald-500: #245257;
- --emerald-600: #163539;
- --emerald-700: #0c2427;
- --emerald-800: #071316;
+ --emerald-50: #d3e8ea;
+ --emerald-100: #a8d2d5;
+ --emerald-200: #7cbbc0;
+ --emerald-300: #52a3a9;
+ --emerald-400: #4c8d94;
+ --emerald-500: #3b6c71;
+ --emerald-600: #315d62;
+ --emerald-700: #264c50;
+ --emerald-800: #163539;
+ --emerald-900: #0c2427;
 
- --peach-300: #ffd9cb;
- --peach-600: #e98663;
+ --tangerine-50: #feeae3;
+ --tangerine-100: #ffdaca;
+ --tangerine-200: #fecab9;
+ --tangerine-300: #fcb8a2;
+ --tangerine-400: #f8b095;
+ --tangerine-500: #e7997e;
+ --tangerine-600: #dd7b60;
+ --tangerine-700: #d26447;
+ --tangerine-800: #c14828;
+ --tangerine-900: #91361e;
+
+ --cranberry-50: #faeff1;
+ --cranberry-100: #f5e6e9;
+ --cranberry-200: #e6bbc2;
+ --cranberry-300: #d68d9a;
+ --cranberry-400: #c56071;
+ --cranberry-500: #bd495d;
+ --cranberry-600: #a94353;
+ --cranberry-700: #84303e;
+ --cranberry-800: #6f232f;
+ --cranberry-900: #4f1821;
 
  --navy-50: #f7f8fa;
  --neutral-50: #fcfafb;
